<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="price_format">$%1$.2f</string>
    <string name="price_text">$%.2f</string>
    <string name="back">background</string>
    <string name="cart">My Cart</string>
    <string name="emptyCart">Your cart is empty</string>
    <string name="Subtotal">Subtotal</string>
    <string name="sen1">Add some delicious coffee to get started</string>
    <string name="startPrice">$0.00</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="deliveryInfo">Delivery Information</string>
    <string name="fullName">Full Name</string>
    <string name="enterName">Enter your name</string>
    <string name="PhoneNo">Phone Number</string>
    <string name="delAdd">Delivery Address</string>
    <string name="OrderSum">Order Summary</string>
    <string name="delFee">Delivery Fee</string>
    <string name="placeOrder">Place Order</string>
    <string name="detail">Detail</string>
    <string name="review">(230 reviews)</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="milkexpresso">Espresso, Milk</string>
    <string name="float1">⭐ 4.8</string>
    <string name="price1">$4.50</string>
    <string name="startAdd">Start adding your favorite coffee drinks</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="one">1</string>
    <string name="addCart">Add to Cart</string>
    <string name="exploreCoffee">Explore Coffee</string>
    <string name="myFav">My Favorites</string>
    <string name="noFav">No favorites yet</string>
    <string name="password">Password</string>
    <string name="forget">Forgot Password?</string>
    <string name="welcome">Welcome</string>
    <string name="loginCont">Login to continue</string>
    <string name="username">Username</string>
    <string name="enterUser">Enter your username</string>
    <string name="enterPass">Enter your password</string>
    <string name="login">Login</string>
   <string name="signup">Sign Up</string>
    <string name="skipNow">Skip for now</string>
    <string name="user">User</string>
    <string name="searchFav">Search Your Favourites</string>
    <string name="popCoffee">Popular Coffees</string>
    <string name="cate">Category</string>
    <string name="car">Cart</string>
    <string name="home">Home</string>
    <string name="fav">Favorites</string>
    <string name="explore">Explore</string>
    <string name="notification">Notification</string>
    <string name="orderPlaced">Order Placed</string>
    <string name="notifications">Notifications</string>
    <string name="orderDetail">Order Details</string>
</resources>